# 27-fast-api

./: .gitignore  .pylintrc  docker-compose.yml  justfile  log_conf.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 44d47ff3879f_init.py  5613cd6370e2_add_tasks.py  ae10a7d8760a_add_user_to_project.py  fe78346f74fc_add_users.py
app/: main.py
app/core/: db.py  middleware.py  settings.py
app/posts/: routes.py
app/projects/: db.py  model.py  repository.py  routes.py  schema.py  service.py
app/rand/: routes.py  schema.py
app/tasks/: models.py  repository.py  routes.py  schema.py  service.py
app/users/: current_user.py  jwt.py  model.py  repository.py  routes.py  schema.py  security.py  service.py
