[project]
name = "board-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"alembic>=1.18.4",
	"asyncpg>=0.31.0",
	"fastapi[standard]>=0.127.0",
	"pydantic[email]>=2.12.5",
	"sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = ["ruff>=0.14.10"]
